--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/138/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/138/index.mdx
@@ -45,7 +45,111 @@ import Support from "../_support.mdx";
 
 ## ⚛️ React {#react}
 
-<Todo />
+Remix + Extraction?
+https://github.com/remix-run/remix/discussions/5383
+
+- [My experience learning React, web standards, and Remix](https://andre-landgraf.dev/blog/2023-03-11_web_standards_and_react)
+
+- [A Brief History of Reactivity](https://www.builder.io/blog/history-of-reactivity)
+
+- [Client-side JavaScript and React criticism: What comes next?](https://molily.de/javascript-criticism/)
+
+- [The Great Gaslighting of the JavaScript Era](https://www.spicyweb.dev/the-great-gaslighting-of-the-js-age/)
+
+- [State in React is Immutable](https://reacttraining.com/blog/state-in-react-is-immutable)
+
+- [Where did Hooks come from?](https://reacttraining.com/blog/where-did-hooks-come-from)
+
+- [React's place in the frontend ecosystem](React's place in the frontend ecosystem ) + https://twitter.com/JSPartyFM/status/1633874227299520512
+
+https://www.reddit.com/r/reactjs/comments/11m5hdi/react_server_components_with_dan_abramov_joe/
+
+https://twitter.com/asidorenko_/status/1633930160561963012
+
+https://twitter.com/leeerob/status/1633595208448311296
+
+https://twitter.com/dan_abramov/status/1633574036767662080
+
+https://twitter.com/Steve8708/status/1633569328074465280
+
+https://twitter.com/mhevery/status/1633534060873256960
+
+https://twitter.com/Andersonmancini/status/1633531278724087809
+
+https://twitter.com/devongovett/status/1623381741493792768
+
+[React Server Components with Dan Abramov, Joe Savona, and Kent C. Dodds](https://www.youtube.com/watch?v=h7tur48JSaw) + https://twitter.com/kentcdodds/status/1633516275002667009
+
+[RSC with Dan Abramov and Joe Savona Live Stream](https://kentcdodds.com/blog/rsc-with-dan-abramov-and-joe-savona-live-stream)
+
+Astro 2.1 https://twitter.com/astrodotbuild/status/1633514114877202434
+
+https://twitter.com/jherr/status/1633504835525054465
+
+[The Most Popular Node.js Frameworks in 2023](https://stackdiary.com/node-js-frameworks/)
+
+[Elegantly managing state and renders in React](https://remotion.com/blog/untangling-state-in-react)
+
+---
+
+Astro docs launch day ?
+
+https://twitter.com/astrodotbuild/status/1633933256046329863
+
+---
+
+Relay
+
+https://twitter.com/dan_abramov/status/1634959944733835265
+
+https://twitter.com/dan_abramov/status/1634968234821844992
+
+https://twitter.com/dan_abramov/status/1634959944733835265
+
+---
+
+Remotion + FFmpeg C API: https://twitter.com/JNYBGR/status/1634896113600720901
+
+---
+
+[Integrating Remix Router with React Transitions](https://github.com/remix-run/remix/issues/5763)
+
+https://twitter.com/dan_abramov/status/1634300734094057472
+
+---
+
+Million 2.0
+
+https://twitter.com/aidenybai/status/1634060432372813829
+
+---
+
+https://twitter.com/mhevery/status/1634035039121059840
+
+---
+
+[Lazy Loading Routes in React Router 6.4+](https://remix.run/blog/lazy-loading-routes) + https://twitter.com/brophdawg11/status/1634281191175081987
+
+---
+
+- 🧵 [70% of Docusaurus sites have good Core Web Vitals](https://twitter.com/sebastienlorber/status/1635661211579580429): petit coup de gueule, on oublie souvent Docusaurus des meta-frameworks React malgré un usage élevé et de bonnes perfs.
+- 📜 [Understanding Resumability from the Ground Up](https://www.builder.io/blog/resumability-from-ground-up)
+- 📜 [Using Zod & TypeScript for more than user input validation](https://scastiel.dev/zod-typescript)
+- 📦 [next-route-visualizer](https://github.com/DiiiaZoTe/next-route-visualizer)
+- 📦 [Radix - new Form primitive](https://twitter.com/radix_ui/status/1633483912755261443)
+- 📦 [Nodl 1.0](https://twitter.com/emilwidlund/status/1634804041397022720)
+- 📜 [Send emails using React and Tailwind CSS](https://resend.com/blog/tailwind-with-react-email)
+- 📦 [Tremor 2.0](https://twitter.com/tremorlabs/status/1635064912153284609)
+- 📜 [Fine-tuning refs with useImperativeHandle](https://prateeksurana.me/blog/fine-tuning-refs-with-useimperativehandle/)
+- 📦 [Superflare - A full-stack toolkit for Cloudflare Workers](https://superflare.dev/): intégration avec Remix, et bientôt Next.js?
+- 📜 [Full-Stack TypeScript with tRPC and React](https://www.robinwieruch.de/react-trpc/)
+- 📜 [How to Drag and Drop in React](https://www.robinwieruch.de/react-drag-and-drop/)
+- 📦 [Ink 4.0](https://github.com/vadimdemedes/ink/releases/tag/v4.0.0): le renderer React pour les CLI passe sous React 18 et ESM.
+- [Astro JS Framework: A Practical Guide To Building Faster Websites](https://bejamas.io/blog/practical-guide-to-astro-js-framework/)
+- 📦 [Framer-Motion 10.3](https://twitter.com/mattgperry/status/1635641473319280646)
+- 📦 [SWR 2.1 - useSWRSubscription + useSWRInfinite parallel option](https://github.com/vercel/swr/releases/tag/v2.1.0)
+- 📦 [Koestlich](https://twitter.com/coconut_xr/status/1633770307470098434): un "3D UI-kit" basé sur React-Three-Fiber 🤪
+- 📦 [Storybook 7.0 RC](https://github.com/storybookjs/storybook/releases/tag/v7.0.0-rc.0): API framework avec support Next.js, Component Story Format 3, MDX 2... voir aussi la conférence [Storybook Day 2023](https://www.youtube.com/watch?v=P0hJm5v8TJw)
 
 <SubscribeFormEmbed />
 
@@ -65,7 +169,15 @@ Vous pouvez également **analyser les résultats des sondages** dans des tableau
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- 🧑‍🎓 [Bridging Tutorial - Learn how to use any platform API in React Native app](https://mateusz1913.github.io/rnbridgingtutorial/)
+- 📜 [Shopify Tophat - Crafting a Delightful Mobile Developer Experience](https://shopify.engineering/shopify-tophat-mobile-developer-testing)
+- 📜 [Building smooth Shared Element Transitions in React Native](https://mrousavy.com/blog/Shared-Element-Transitions-in-React-Native) + https://twitter.com/mrousavy/status/1633812917928828929
+- 📜 [Microsoft - Adding Jest Snapshot Testing to React Native Windows Apps](https://devblogs.microsoft.com/react-native/2023-03-02-adding-snapshot-testing-to-rnw-apps/)
+- 📜 [Expo - EAS Build will Default to M1/M2 for iOS Builds](https://blog.expo.dev/eas-build-will-default-to-m1-m2-for-ios-builds-24208008a68d)
+- 📜 [Using React Native VisionCamera: Demo and alternatives](https://blog.logrocket.com/react-native-visioncamera-demo-alternatives/)
+- 🎙️ [RNR 262 - Maestro: The App-solute Solution for Mobile UI Testing](https://reactnativeradio.com/episodes/rnr-262-maestro-the-app-solute-solution-for-mobile-ui-testing)
+- 📦 [Metro 0.76](https://github.com/facebook/metro/releases/tag/v0.76.0): une API reprise de Webpack qui devrait [permettre le code splitting](https://twitter.com/sebastienlorber/status/1635671177082417158) et sera utilisée par Expo Router.
+- 👀 [Expo Web Global CSS support (exp)](https://twitter.com/Baconbrix/status/1633562265189326855)
 
 ---
 
@@ -91,24 +203,37 @@ Teale recrute un dev mobile React-Native / TypeScript pour travailler sur une ap
 
 ## 🇫🇷 En français {#fr}
 
-Pas de contenu cette semaine 😅
+- 🎥 [Introduction pour débutant à NextJS 13](https://www.youtube.com/watch?v=MX11pscF8nc)
+- 🎥 [Next JS Project: Routage, Navigation & NavBar](https://www.youtube.com/watch?v=eKRzywQCDaM)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
-
-<Todo />
 
 ---
 
 ## 🔀 Autre {#other}
 
-<Todo />
-
----
+- [Rspack](https://www.rspack.dev/): annonce officielle du bundler Rust de ByteDance, compatible avec Webpack mais beaucoup plus rapide.
+- [Rspack: The Rust-Based Web Bundler that Combines High Performance with Interoperability](https://valor-software.com/press-release/rs-pack-rust-based-web-bundler)
+- [Unplugin 1.3 - Rspack support](https://twitter.com/antfu7/status/1634517321392726017)
+- [CSS Nesting](https://developer.chrome.com/articles/css-nesting/): arrivée dans Chrome 112.
+- [Proto, a next-generation toolchain manager](https://moonrepo.dev/blog/proto): nouvelle alternative à fnm ou Volta pour gérer son runtime Node.js (mais pas que).
+- [SPA view transitions land in Chrome 111](https://developer.chrome.com/blog/spa-view-transitions-land/)
+- [TypeScript’s Migration to Modules](https://devblogs.microsoft.com/typescript/typescripts-migration-to-modules/)
+- [Cloudflare Workers - Node.js compat demo](https://twitter.com/jasnell/status/1633949738516230144)
+- [ts-reset 0.4](https://twitter.com/mattpocockuk/status/1633525273860661257)
+- [Consider Animating Your Canvas in a Web Worker](https://www.macarthur.me/posts/animate-canvas-in-a-worker)
+- [All JavaScript and TypeScript Features of the last 3 years](https://betterprogramming.pub/all-javascript-and-typescript-features-of-the-last-3-years-629c57e73e42)
+- [How to measure CWVs on SPAs](https://estelafranco.com/blog/spa-cwv/)
+- [Jest 29.5 - CLI --randomize option](https://github.com/facebook/jest/releases/tag/v29.5.0)
+- [JavaScript Oxidation Compiler v0.1](https://github.com/Boshen/oxc)
+- [Why Turborepo is migrating from Go to Rust](https://vercel.com/blog/turborepo-migration-go-rust)
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/sebastienlorber/status/1635592966973669379
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/todo)
+
+🤣 [Les autres tweets marrant cette semaine](https://twitter.com/sebastienlorber/status/1635710256876777472)
 
 A plus 👋
