--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/138/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/138/index.mdx
@@ -45,56 +45,21 @@ import Support from "../_support.mdx";
 
 ## ⚛️ React {#react}
 
-Remix + Extraction?
-https://github.com/remix-run/remix/discussions/5383
-
 - [My experience learning React, web standards, and Remix](https://andre-landgraf.dev/blog/2023-03-11_web_standards_and_react)
-
 - [A Brief History of Reactivity](https://www.builder.io/blog/history-of-reactivity)
-
 - [Client-side JavaScript and React criticism: What comes next?](https://molily.de/javascript-criticism/)
-
 - [The Great Gaslighting of the JavaScript Era](https://www.spicyweb.dev/the-great-gaslighting-of-the-js-age/)
-
 - [State in React is Immutable](https://reacttraining.com/blog/state-in-react-is-immutable)
-
 - [Where did Hooks come from?](https://reacttraining.com/blog/where-did-hooks-come-from)
-
-- [React's place in the frontend ecosystem](React's place in the frontend ecosystem ) + https://twitter.com/JSPartyFM/status/1633874227299520512
-
-https://www.reddit.com/r/reactjs/comments/11m5hdi/react_server_components_with_dan_abramov_joe/
-
-https://twitter.com/asidorenko_/status/1633930160561963012
-
-https://twitter.com/leeerob/status/1633595208448311296
-
-https://twitter.com/dan_abramov/status/1633574036767662080
-
-https://twitter.com/Steve8708/status/1633569328074465280
-
-https://twitter.com/mhevery/status/1633534060873256960
-
-https://twitter.com/Andersonmancini/status/1633531278724087809
-
-https://twitter.com/devongovett/status/1623381741493792768
-
-[React Server Components with Dan Abramov, Joe Savona, and Kent C. Dodds](https://www.youtube.com/watch?v=h7tur48JSaw) + https://twitter.com/kentcdodds/status/1633516275002667009
-
-[RSC with Dan Abramov and Joe Savona Live Stream](https://kentcdodds.com/blog/rsc-with-dan-abramov-and-joe-savona-live-stream)
-
-Astro 2.1 https://twitter.com/astrodotbuild/status/1633514114877202434
-
-https://twitter.com/jherr/status/1633504835525054465
-
-[The Most Popular Node.js Frameworks in 2023](https://stackdiary.com/node-js-frameworks/)
-
-[Elegantly managing state and renders in React](https://remotion.com/blog/untangling-state-in-react)
-
----
-
-Astro docs launch day ?
-
-https://twitter.com/astrodotbuild/status/1633933256046329863
+- [React's place in the frontend ecosystem](https://www.youtube.com/watch?v=GHRkN_G5BMc)
+- [Node.js site now using Next.js](https://twitter.com/leeerob/status/1633595208448311296)
+- [React Server Components with Dan Abramov, Joe Savona, and Kent C. Dodds](https://www.youtube.com/watch?v=h7tur48JSaw) + https://twitter.com/kentcdodds/status/1633516275002667009
+- [RSC with Dan Abramov and Joe Savona Live Stream](https://kentcdodds.com/blog/rsc-with-dan-abramov-and-joe-savona-live-stream)
+- [React Flight - Add Reply Encoding](https://github.com/facebook/react/pull/26360) + https://twitter.com/acdlite/status/1634219379901489154
+- [Astro 2.1](https://astro.build/blog/astro-210/) https://twitter.com/astrodotbuild/status/1633514114877202434
+- [Unlock the Power of AI with Defer and NextJS 13 - UI Magic!](https://www.youtube.com/watch?v=kHsTp2LENUI)
+- [The Most Popular Node.js Frameworks in 2023](https://stackdiary.com/node-js-frameworks/)
+- [Elegantly managing state and renders in React](https://remotion.com/blog/untangling-state-in-react)
 
 ---
 
