--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/138/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/138/index.mdx
@@ -9,6 +9,10 @@ unlisted: true
 
 Salut à tous !
 
+GPT-4
+
+Referral program
+
 <Todo />
 
 <!-- truncate -->
@@ -45,51 +49,7 @@ import Support from "../_support.mdx";
 
 ## ⚛️ React {#react}
 
-- [My experience learning React, web standards, and Remix](https://andre-landgraf.dev/blog/2023-03-11_web_standards_and_react)
-- [A Brief History of Reactivity](https://www.builder.io/blog/history-of-reactivity)
-- [Client-side JavaScript and React criticism: What comes next?](https://molily.de/javascript-criticism/)
-- [The Great Gaslighting of the JavaScript Era](https://www.spicyweb.dev/the-great-gaslighting-of-the-js-age/)
-- [State in React is Immutable](https://reacttraining.com/blog/state-in-react-is-immutable)
-- [Where did Hooks come from?](https://reacttraining.com/blog/where-did-hooks-come-from)
-- [React's place in the frontend ecosystem](https://www.youtube.com/watch?v=GHRkN_G5BMc)
-- [Node.js site now using Next.js](https://twitter.com/leeerob/status/1633595208448311296)
-- [React Server Components with Dan Abramov, Joe Savona, and Kent C. Dodds](https://www.youtube.com/watch?v=h7tur48JSaw) + https://twitter.com/kentcdodds/status/1633516275002667009
-- [RSC with Dan Abramov and Joe Savona Live Stream](https://kentcdodds.com/blog/rsc-with-dan-abramov-and-joe-savona-live-stream)
-- [React Flight - Add Reply Encoding](https://github.com/facebook/react/pull/26360) + https://twitter.com/acdlite/status/1634219379901489154
-- [Astro 2.1](https://astro.build/blog/astro-210/) https://twitter.com/astrodotbuild/status/1633514114877202434
-- [Unlock the Power of AI with Defer and NextJS 13 - UI Magic!](https://www.youtube.com/watch?v=kHsTp2LENUI)
-- [The Most Popular Node.js Frameworks in 2023](https://stackdiary.com/node-js-frameworks/)
-- [Elegantly managing state and renders in React](https://remotion.com/blog/untangling-state-in-react)
-
 ---
-
-Relay
-
-https://twitter.com/dan_abramov/status/1634959944733835265
-
-https://twitter.com/dan_abramov/status/1634968234821844992
-
-https://twitter.com/dan_abramov/status/1634959944733835265
-
----
-
-Remotion + FFmpeg C API: https://twitter.com/JNYBGR/status/1634896113600720901
-
----
-
-[Integrating Remix Router with React Transitions](https://github.com/remix-run/remix/issues/5763)
-
-https://twitter.com/dan_abramov/status/1634300734094057472
-
----
-
-Million 2.0
-
-https://twitter.com/aidenybai/status/1634060432372813829
-
----
-
-https://twitter.com/mhevery/status/1634035039121059840
 
 ---
 
@@ -97,24 +57,41 @@ https://twitter.com/mhevery/status/1634035039121059840
 
 ---
 
+- 👀 [React Flight - Add Reply Encoding](https://github.com/facebook/react/pull/26360) + https://twitter.com/acdlite/status/1634219379901489154
+- 👀 [Integrating Remix Router with React Transitions](https://twitter.com/dan_abramov/status/1634300734094057472): Dan Abramov suggère d'utiliser startTransition dans Remix. Les composants suspendus en dehors de `<Suspense>` devraient bloquer la transition.
+- 🧵 [Dan Abramov - "if you’re not composing GraphQL fragments from multiple components into one query \[...\] you’re missing 80% of the point of GraphQL"](https://twitter.com/dan_abramov/status/1634968234821844992): des discussions intéressantes autour de Relay cette semaine. Bien qu'assez intimidant, ce client GraphQL présente de nombreux avantages comparé aux solutions plus simples (colocation, data masking...).
 - 🧵 [70% of Docusaurus sites have good Core Web Vitals](https://twitter.com/sebastienlorber/status/1635661211579580429): petit coup de gueule, on oublie souvent Docusaurus des meta-frameworks React malgré un usage élevé et de bonnes perfs.
+- 📜 [My experience learning React, web standards, and Remix](https://andre-landgraf.dev/blog/2023-03-11_web_standards_and_react)
+- 📜 [A Brief History of Reactivity](https://www.builder.io/blog/history-of-reactivity)
+- 📜 [Client-side JavaScript and React criticism: What comes next?](https://molily.de/javascript-criticism/)
+- 📜 [The Great Gaslighting of the JavaScript Era](https://www.spicyweb.dev/the-great-gaslighting-of-the-js-age/)
+- 📜 [State in React is Immutable](https://reacttraining.com/blog/state-in-react-is-immutable)
+- 📜 [Where did Hooks come from?](https://reacttraining.com/blog/where-did-hooks-come-from)
+- 📜 [The Most Popular Node.js Frameworks in 2023](https://stackdiary.com/node-js-frameworks/)
+- 📜 [Elegantly managing state and renders in React](https://remotion.com/blog/untangling-state-in-react)
 - 📜 [Understanding Resumability from the Ground Up](https://www.builder.io/blog/resumability-from-ground-up)
 - 📜 [Using Zod & TypeScript for more than user input validation](https://scastiel.dev/zod-typescript)
+- 📜 [Send emails using React and Tailwind CSS](https://resend.com/blog/tailwind-with-react-email)
+- 📜 [Fine-tuning refs with useImperativeHandle](https://prateeksurana.me/blog/fine-tuning-refs-with-useimperativehandle/)
+- 📜 [Full-Stack TypeScript with tRPC and React](https://www.robinwieruch.de/react-trpc/)
+- 📜 [How to Drag and Drop in React](https://www.robinwieruch.de/react-drag-and-drop/)
+- 🎥 [RSC with Dan Abramov and Joe Savona Live Stream](https://kentcdodds.com/blog/rsc-with-dan-abramov-and-joe-savona-live-stream)
+- 🎥 [React's place in the frontend ecosystem](https://www.youtube.com/watch?v=GHRkN_G5BMc)
+- 🎥 [Ranking every Full Stack Framework (By...TypeSafety?)](https://www.youtube.com/watch?v=zADNdGVIPBY)
+- 🎥 [Unlock the Power of AI with Defer and NextJS 13 - UI Magic!](https://www.youtube.com/watch?v=kHsTp2LENUI)
+- 📦 [Ink 4.0](https://github.com/vadimdemedes/ink/releases/tag/v4.0.0): le renderer React pour les CLI passe sous React 18 et ESM.
+- 📦 [Koestlich](https://twitter.com/coconut_xr/status/1633770307470098434): un "3D UI-kit" basé sur React-Three-Fiber 🤪
+- 📦 [Storybook 7.0 RC](https://github.com/storybookjs/storybook/releases/tag/v7.0.0-rc.0): API framework avec support Next.js, Component Story Format 3, MDX 2... voir aussi la conférence [Storybook Day 2023](https://www.youtube.com/watch?v=P0hJm5v8TJw)
+- 📦 [Astro 2.1](https://astro.build/blog/astro-210/) https://twitter.com/astrodotbuild/status/1633514114877202434
+- 📦 [Million 2.0](https://twitter.com/aidenybai/status/1634060432372813829): un virtual DOM basé sur le concept de "blocks" compatible avec React et qui peut le rendre 70% plus rapide 🤔 a tester!
+- 📦 [SWR 2.1](https://github.com/vercel/swr/releases/tag/v2.1.0): useSWRSubscription + useSWRInfinite parallel option
+- 📦 [Superflare - A full-stack toolkit for Cloudflare Workers](https://superflare.dev/): intégration avec Remix, et bientôt Next.js?
+- 📦 [Tremor 2.0](https://twitter.com/tremorlabs/status/1635064912153284609)
 - 📦 [next-route-visualizer](https://github.com/DiiiaZoTe/next-route-visualizer)
 - 📦 [Radix - new Form primitive](https://twitter.com/radix_ui/status/1633483912755261443)
 - 📦 [Nodl 1.0](https://twitter.com/emilwidlund/status/1634804041397022720)
-- 📜 [Send emails using React and Tailwind CSS](https://resend.com/blog/tailwind-with-react-email)
-- 📦 [Tremor 2.0](https://twitter.com/tremorlabs/status/1635064912153284609)
-- 📜 [Fine-tuning refs with useImperativeHandle](https://prateeksurana.me/blog/fine-tuning-refs-with-useimperativehandle/)
-- 📦 [Superflare - A full-stack toolkit for Cloudflare Workers](https://superflare.dev/): intégration avec Remix, et bientôt Next.js?
-- 📜 [Full-Stack TypeScript with tRPC and React](https://www.robinwieruch.de/react-trpc/)
-- 📜 [How to Drag and Drop in React](https://www.robinwieruch.de/react-drag-and-drop/)
-- 📦 [Ink 4.0](https://github.com/vadimdemedes/ink/releases/tag/v4.0.0): le renderer React pour les CLI passe sous React 18 et ESM.
-- [Astro JS Framework: A Practical Guide To Building Faster Websites](https://bejamas.io/blog/practical-guide-to-astro-js-framework/)
 - 📦 [Framer-Motion 10.3](https://twitter.com/mattgperry/status/1635641473319280646)
-- 📦 [SWR 2.1 - useSWRSubscription + useSWRInfinite parallel option](https://github.com/vercel/swr/releases/tag/v2.1.0)
-- 📦 [Koestlich](https://twitter.com/coconut_xr/status/1633770307470098434): un "3D UI-kit" basé sur React-Three-Fiber 🤪
-- 📦 [Storybook 7.0 RC](https://github.com/storybookjs/storybook/releases/tag/v7.0.0-rc.0): API framework avec support Next.js, Component Story Format 3, MDX 2... voir aussi la conférence [Storybook Day 2023](https://www.youtube.com/watch?v=P0hJm5v8TJw)
+- 🐦 [Node.js site now using Next.js](https://twitter.com/leeerob/status/1633595208448311296)
 
 <SubscribeFormEmbed />
 
