--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/138/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/138/index.mdx
@@ -49,10 +49,6 @@ import Support from "../_support.mdx";
 
 ## ⚛️ React {#react}
 
----
-
----
-
 [Lazy Loading Routes in React Router 6.4+](https://remix.run/blog/lazy-loading-routes) + https://twitter.com/brophdawg11/status/1634281191175081987
 
 ---
@@ -60,7 +56,7 @@ import Support from "../_support.mdx";
 - 👀 [React Flight - Add Reply Encoding](https://github.com/facebook/react/pull/26360) + https://twitter.com/acdlite/status/1634219379901489154
 - 👀 [Integrating Remix Router with React Transitions](https://twitter.com/dan_abramov/status/1634300734094057472): Dan Abramov suggère d'utiliser startTransition dans Remix. Les composants suspendus en dehors de `<Suspense>` devraient bloquer la transition.
 - 🧵 [Dan Abramov - "if you’re not composing GraphQL fragments from multiple components into one query \[...\] you’re missing 80% of the point of GraphQL"](https://twitter.com/dan_abramov/status/1634968234821844992): des discussions intéressantes autour de Relay cette semaine. Bien qu'assez intimidant, ce client GraphQL présente de nombreux avantages comparé aux solutions plus simples (colocation, data masking...).
-- 🧵 [70% of Docusaurus sites have good Core Web Vitals](https://twitter.com/sebastienlorber/status/1635661211579580429): petit coup de gueule, on oublie souvent Docusaurus des meta-frameworks React malgré un usage élevé et de bonnes perfs.
+- 🧵 [70% of Docusaurus sites have good Core Web Vitals](https://twitter.com/sebastienlorber/status/1635661211579580429): petit coup de gueule, on oublie souvent Docusaurus dans la liste des meta-frameworks React malgré un usage élevé et de bonnes perfs.
 - 📜 [My experience learning React, web standards, and Remix](https://andre-landgraf.dev/blog/2023-03-11_web_standards_and_react)
 - 📜 [A Brief History of Reactivity](https://www.builder.io/blog/history-of-reactivity)
 - 📜 [Client-side JavaScript and React criticism: What comes next?](https://molily.de/javascript-criticism/)
