--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/138/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/138/index.mdx
@@ -9,7 +9,7 @@ unlisted: true
 
 Salut à tous !
 
-GPT-4
+[GPT-4](https://openai.com/product/gpt-4)
 
 Referral program
 
@@ -49,11 +49,15 @@ import Support from "../_support.mdx";
 
 ## ⚛️ React {#react}
 
-[Lazy Loading Routes in React Router 6.4+](https://remix.run/blog/lazy-loading-routes) + https://twitter.com/brophdawg11/status/1634281191175081987
+[![Lazy Loading Routes in React Router 6.4+](/emails/issues/138/reactrouterlazy.jpg)](https://remix.run/blog/lazy-loading-routes)
+
+**[Lazy Loading Routes in React Router 6.4+](https://remix.run/blog/lazy-loading-routes)**
+
+[React-Router 6.9](https://github.com/remix-run/react-router/releases/tag/react-router%406.9.0) vient de sortir avec une nouvelle de lazy routes qui permet de limiter les waterfalls, et optimiser le temps de chargement de vos apps. C'est de cette manière que Remix fonctionne, mais vous pouvez maintenant utiliser cette technique sur n'importe quelle app basée sur React-Router. Perso je compte l'utiliser sur Docusaurus (repose sur React-Router).
 
 ---
 
-- 👀 [React Flight - Add Reply Encoding](https://github.com/facebook/react/pull/26360) + https://twitter.com/acdlite/status/1634219379901489154
+- 👀 [React Flight PR - Add Reply Encoding](https://github.com/facebook/react/pull/26360): support du streaming pour server => client.
 - 👀 [Integrating Remix Router with React Transitions](https://twitter.com/dan_abramov/status/1634300734094057472): Dan Abramov suggère d'utiliser startTransition dans Remix. Les composants suspendus en dehors de `<Suspense>` devraient bloquer la transition.
 - 🧵 [Dan Abramov - "if you’re not composing GraphQL fragments from multiple components into one query \[...\] you’re missing 80% of the point of GraphQL"](https://twitter.com/dan_abramov/status/1634968234821844992): des discussions intéressantes autour de Relay cette semaine. Bien qu'assez intimidant, ce client GraphQL présente de nombreux avantages comparé aux solutions plus simples (colocation, data masking...).
 - 🧵 [70% of Docusaurus sites have good Core Web Vitals](https://twitter.com/sebastienlorber/status/1635661211579580429): petit coup de gueule, on oublie souvent Docusaurus dans la liste des meta-frameworks React malgré un usage élevé et de bonnes perfs.
@@ -70,7 +74,7 @@ import Support from "../_support.mdx";
 - 📜 [Send emails using React and Tailwind CSS](https://resend.com/blog/tailwind-with-react-email)
 - 📜 [Fine-tuning refs with useImperativeHandle](https://prateeksurana.me/blog/fine-tuning-refs-with-useimperativehandle/)
 - 📜 [Full-Stack TypeScript with tRPC and React](https://www.robinwieruch.de/react-trpc/)
-- 📜 [How to Drag and Drop in React](https://www.robinwieruch.de/react-drag-and-drop/)
+- 📜 [Beautiful and mind-bending effects with WebGL Render Targets](https://blog.maximeheckel.com/posts/beautiful-and-mind-bending-effects-with-webgl-render-targets/)
 - 🎥 [RSC with Dan Abramov and Joe Savona Live Stream](https://kentcdodds.com/blog/rsc-with-dan-abramov-and-joe-savona-live-stream)
 - 🎥 [React's place in the frontend ecosystem](https://www.youtube.com/watch?v=GHRkN_G5BMc)
 - 🎥 [Ranking every Full Stack Framework (By...TypeSafety?)](https://www.youtube.com/watch?v=zADNdGVIPBY)
