templates funny tweet

--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/139/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/139/index.mdx
@@ -118,6 +118,8 @@ Pas de contenu cette semaine 😅
 
 <Todo />
 
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/todo)
+[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+
+🤣 [Les autres tweets marrant cette semaine](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
 A plus 👋
