--- a/website/newsletter/139/index.mdx
+++ b/website/newsletter/139/index.mdx
@@ -106,6 +106,8 @@ We have several roles open for developers focused on React Native! Pay is ~160k 
 
 <Todo />
 
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/todo)
+[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+
+🤣 [Other funny tweets this week](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
 See ya! 👋
