--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/138/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/138/index.mdx
@@ -4,7 +4,6 @@ title: "React Hebdo #138: React-Router, Rspack, RSC, Storybook, Astro, Million, 
 authors: [slorber]
 date: 03-14-2023
 image: /img/TWIR_POST.png
-unlisted: true
 ---
 
 Salut à tous !
@@ -19,14 +18,14 @@ J'aimerais créer un "referral program" pour cette newsletter, pour t'inciter à
 
 J'ai pensé à:
 
-- +1 abonné: je t'envoie mon top 10 des articles React
-- +3 abonnés: je te donne un accès à ma DB d'articles
-- +5 abonnés: je te remercie publiquement sur Twitter ou LinkedIn
-- +10 abonnés: je t'offre une diffusion d'offre d'emploi dans la newsletter
-- +30 abonnés: je t'offre un cours au choix: Just JavaScript (Dan Abramov), Three.js Journey (Bruno Simon)...
-- +50 abonnés: je t'offre une heure de consulting React
+- +1 abonné - mon top 10 des articles React
+- +3 abonnés - accès à ma DB d'articles
+- +5 abonnés - un remerciement public sur Twitter ou LinkedIn
+- +10 abonnés - une diffusion d'offre d'emploi dans la newsletter
+- +30 abonnés - un cours au choix parmi Just JavaScript (Dan Abramov), Three.js Journey (Bruno Simon)...
+- +50 abonnés - une heure de consulting React
 
-C'est pas évident de choisir quoi offrir 😅. C'est plus simple de gérer des produits numériques, mais je ne suis pas fermé à quelques produits physiques (stickers, chaussettes, sneakers, sac a doc, mug...).
+C'est pas évident de choisir quoi offrir 😅. C'est plus simple de gérer des produits numériques, mais je ne suis pas fermé à quelques produits physiques (stickers, chaussettes, sneakers, sac a dos, mug, macbook...).
 
 Tu peux répondre à cet email directement pour me donner ton avis, et me dire ce qui te motiverait le plus?
 
@@ -68,7 +67,7 @@ import Support from "../_support.mdx";
 
 **[Lazy Loading Routes in React Router 6.4+](https://remix.run/blog/lazy-loading-routes)**
 
-[React-Router 6.9](https://github.com/remix-run/react-router/releases/tag/react-router%406.9.0) vient de sortir avec une nouvelle de lazy routes qui permet de limiter les waterfalls, et optimiser le temps de chargement de vos apps. C'est de cette manière que Remix fonctionne, mais vous pouvez maintenant utiliser cette technique sur n'importe quelle app basée sur React-Router. Perso je compte l'utiliser sur Docusaurus (repose sur React-Router).
+[React-Router 6.9](https://github.com/remix-run/react-router/releases/tag/react-router%406.9.0) vient de sortir avec une nouvelle feature de lazy routes qui permet de limiter les waterfalls, et optimiser le temps de chargement de vos apps. C'est de cette manière que Remix fonctionne, mais vous pouvez maintenant utiliser cette technique sur n'importe quelle app basée sur React-Router. Perso je compte l'utiliser sur Docusaurus (repose sur React-Router).
 
 ---
 
