--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/139/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/139/index.mdx
@@ -45,7 +45,7 @@ import Support from "../_support.mdx";
 
 ## ⚛️ React {#react}
 
-<Todo />
+- [Will React's New Cache Fix Its "Use" Hook?](https://www.youtube.com/watch?v=T3m-MZkuadU)
 
 <SubscribeFormEmbed />
 
@@ -87,10 +87,6 @@ Shotgun est la billetterie des évènements electro. Nous recherchons des devs e
 🧑‍💼 [**Premier Octet - Développeurs(euses) React - Paris**](https://www.premieroctet.com/jobs)
 
 Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendrez en développement sur des projets variés et motivants, à la fois serveur et front (React, Nest, Next), et éventuellement mobile (React Native).
-
-🧑‍💼 [**Teale - Mobile Software Engineer - 50-60k - Paris/Remote**](https://sebastienlorber.mylittleteam.com/team/teale/55/719)
-
-Teale recrute un dev mobile React-Native / TypeScript pour travailler sur une app à fort impact dédiée à la santé mentale.
 
 💡 [Comment publier une offre d'emploi ?](https://thisweekinreact.com/fr/sponsor)
 
